# cintx

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  prompt.md
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  fast.md  forensics.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  new-workspace.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  plant-seed.md  pr-branch.md  profile-user.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  remove-workspace.md  (+15 more)
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  planning-config.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  diagnose-issues.md  discovery-phase.md  discuss-phase.md  (+37 more)
.github/workflows/: compat-governance-pr.yml  compat-governance-release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
artifacts/: oracle_gate_closure_report.txt  phase-09-1e-oracle-parity.md
benches/: crossover_cpu_gpu.rs  macro_molecules.rs  micro_families.rs
ci/: api-value-baseline.sh  benchmark-thresholds.json  feature-matrix.yml  gpu-bench.yml  oracle-compare.yml
crates/cintx-capi/: Cargo.toml
crates/cintx-capi/src/: errors.rs  lib.rs  shim.rs
crates/cintx-compat/: Cargo.toml
crates/cintx-compat/src/: helpers.rs  layout.rs  legacy.rs  lib.rs  optimizer.rs  raw.rs  transform.rs  workaround.rs
crates/cintx-core/: Cargo.toml
crates/cintx-cubecl/: Cargo.toml
crates/cintx-cubecl/src/: capability.rs  executor.rs  lib.rs  resident_cache.rs  runtime_bootstrap.rs  specialization.rs  transfer.rs
crates/cintx-cubecl/src/backend/: cpu_backend.rs  mod.rs  wgpu_backend.rs
crates/cintx-cubecl/src/kernels/: center_2c2e.rs  center_3c1e.rs  center_3c2e.rs  center_4c1e.rs  f12.rs  mod.rs  one_electron.rs  two_electron.rs  unstable.rs
crates/cintx-cubecl/src/math/: boys.rs  mod.rs  obara_saika.rs  pdata.rs  roots_xw_data.rs  rys.rs  stg.rs
crates/cintx-cubecl/src/transform/: c2s.rs  c2spinor.rs  c2spinor_coeffs.rs  mod.rs
crates/cintx-cubecl/tests/: boys_tests.rs  c2s_tests.rs  math_integration_tests.rs  obara_saika_tests.rs  pdata_tests.rs  rys_tests.rs
crates/cintx-ops/: Cargo.toml  build.rs
crates/cintx-oracle/: Cargo.toml  build.rs
crates/cintx-oracle/src/: compare.rs  fixtures.rs  lib.rs  vendor_ffi.rs
crates/cintx-oracle/tests/: center_2c2e_parity.rs  center_3c1e_parity.rs  center_3c2e_parity.rs  f12_oracle_parity.rs  one_electron_parity.rs  oracle_gate_closure.rs  two_electron_parity.rs  unstable_source_parity.rs
crates/cintx-rs/: Cargo.toml
crates/cintx-rs/src/: api.rs  builder.rs  error.rs  lib.rs  prelude.rs
crates/cintx-runtime/: Cargo.toml
docs/: cintx_detailed_test_design_en.md  cubecl_error_guideline.md  libcint_detailed_design_resolved_en.md  libcint_detailed_design_resolved_en_routing_amended.md  libcint_module_design_manifest(1).md  libcint_route_coverage_manifest_spec.md  libcint_rust_detailed_design_reviewed_v10.md  phase2-support-matrix.md  phase3-governance-gates.md  phase3-manifest-governance.md  rust_crate_test_guideline.md
docs/design/: api_manifest.csv  cintx_detailed_design.md  cintx_detailed_design_v1.md
libcint-master/src/: cint2c2e.c
libcint-master/testsuite/: test_cint.py:Zone.Identifier
src/: lib.rs
src/api/: raw.rs  safe.rs
src/contracts/: atom.rs  basis.rs  mod.rs  operator.rs  representation.rs  shell.rs
src/diagnostics/: mod.rs  report.rs
src/errors/: libcint_error.rs  mod.rs
src/manifest/: canonicalize.rs  compiled.rs  lock.rs  mod.rs
src/runtime/: execution_plan.rs  executor.rs  helpers.rs  layout.rs  mod.rs  output_writer.rs  planner.rs  policy.rs  validator.rs  workspace_query.rs
tests/: four_c_wrapper_parity.rs  one_e_kinetic_cartesian_wrapper_parity.rs  one_e_kinetic_noncart_wrapper_parity.rs  one_e_nuclear_cartesian_wrapper_parity.rs  one_e_nuclear_noncart_wrapper_parity.rs  one_e_overlap_cartesian_wrapper_parity.rs  one_e_overlap_noncart_wrapper_parity.rs  phase1_diagnostics_contract.rs  phase1_error_taxonomy.rs  phase1_typed_contracts.rs  phase1_workspace_query.rs  phase2_allocation_failures.rs  phase2_cpu_backend_routing.rs  phase2_cpu_execution_matrix.rs  phase2_memory_contracts.rs  phase2_memory_limits.rs  phase2_no_partial_write.rs  phase2_oracle_tolerance.rs  phase2_raw_contracts.rs  phase2_raw_failure_semantics.rs  phase2_raw_query_execute.rs  phase2_safe_evaluate_layout.rs  phase2_safe_raw_equivalence.rs  phase3_compiled_manifest_audit.rs  phase3_helper_transform_parity.rs  phase3_manifest_governance.rs  phase3_optimizer_equivalence.rs  phase3_regression_gates.rs  phase3_route_audit.rs  three_c_wrapper_parity.rs  two_c_wrapper_parity.rs  two_e_wrapper_parity.rs
tests/common/: oracle_runner.rs  phase2_fixtures.rs  phase3_helper_cases.rs
xtask/: Cargo.toml
xtask/src/: bench_report.rs  main.rs  manifest_audit.rs  oracle_covered_update.rs  oracle_update.rs  wgpu_capability_gate.rs
(+287 files in other folders)
