[package]
name = "cintx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cubecl = "0.9.0"
libcint = { version = "0.2.2", features = ["with_4c1e"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tracing = "0.1.41"

[build-dependencies]
cc = "1.2.15"
