[package]
name = "cintx-capi"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
cintx-compat = { path = "../cintx-compat" }
cintx-core = { path = "../cintx-core" }

[features]
default = []
# Keep the C ABI crate stable-only in Phase 3; no unstable-source exports here yet.
capi = []
with-f12 = []
with-4c1e = []
