[package]
name = "cintx-compat"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
cpu = ["cintx-cubecl/cpu"]
with-f12 = ["cintx-cubecl/with-f12"]
with-4c1e = ["cintx-cubecl/with-4c1e"]
unstable-source-api = ["cintx-cubecl/unstable-source-api"]

[dependencies]
cintx-core = { path = "../cintx-core" }
cintx-cubecl = { path = "../cintx-cubecl" }
cintx-ops = { path = "../cintx-ops" }
cintx-runtime = { path = "../cintx-runtime" }
smallvec = "1"
tracing = "0.1"
