[package]
name = "cintx-cubecl"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["cpu"]
cpu = ["cubecl/cpu"]
with-f12 = []
with-4c1e = []

[dependencies]
cintx-core = { path = "../cintx-core" }
cintx-ops = { path = "../cintx-ops" }
cintx-runtime = { path = "../cintx-runtime" }
bytemuck = { version = "1", features = ["derive"] }
cubecl = "0.9.0"
cubecl-wgpu = "0.9.0"
smallvec = "1"
tracing = "0.1"
