[package]
name = "cintx-cubecl"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["cpu"]
cpu = ["cubecl/cpu"]
with-f12 = []
with-4c1e = []
unstable-source-api = []

[dependencies]
cintx-core = { path = "../cintx-core" }
cintx-ops = { path = "../cintx-ops" }
cintx-runtime = { path = "../cintx-runtime" }
bytemuck = { version = "1", features = ["derive"] }
cubecl = { version = "0.9.0", features = ["wgpu"] }
cubecl-wgpu = "0.9.0"
cubecl-runtime = "0.9.0"
smallvec = "1"
tracing = "0.1"
wgpu = "26.0.1"

[dev-dependencies]
approx = "0.5"
