[package]
name = "cintx-oracle"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
cintx-compat = { path = "../cintx-compat" }
cintx-core = { path = "../cintx-core" }
cintx-ops = { path = "../cintx-ops" }
serde_json = "1.0.145"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.15"
