[package]
name = "cintx-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
cintx-core = { path = "../cintx-core" }
cintx-runtime = { path = "../cintx-runtime" }
cintx-compat = { path = "../cintx-compat", optional = true, default-features = false }
thiserror = "2"

[features]
default = []
# Optional families stay explicitly forwarded from the safe facade boundary.
with-f12 = [
    "dep:cintx-compat",
    "cintx-compat/with-f12",
]
with-4c1e = [
    "dep:cintx-compat",
    "cintx-compat/with-4c1e",
]
# Source-only APIs remain opt-in until manifest/oracle release gates approve promotion.
unstable-source-api = [
    "dep:cintx-compat",
    "cintx-compat/unstable-source-api",
]

[package.metadata.cintx]
surface = "safe-facade"
compat_bridge_dependency = "cintx-compat"
forwards_optional_families = ["with-f12", "with-4c1e"]
forwards_unstable_source_api = true
